@@ -242,7 +242,7 @@ done
 #--- END-OF-COMMANDLINE-PARSING------------------------------------------
 
 DOC_PACKAGE=""
-COMMON_DOCS="doc/*.txt doc/*.asc doc/javadocs"
+COMMON_DOCS="doc/*.txt doc/*.asc doc/javadocs doc/berkeleydb"
 COMMON_PACKAGE="3rd_party catman ckpt dtrace examples/jobs \
                 examples/drmaa include inst_sge install_qmaster \
                 install_execd start_gui_installer \
