@@ -8,6 +8,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-04-18-1: Bugfix:      final distribution must contain BDB documentation
+                 Issue:       GE-3454
+                 Review:      DG
+
 JG-2011-04-18-0: Bugfix:      fix for GE-3306 handled implicitly requested
                               exclusive resources incorrectly
                  Belongs to:  JG-2011-04-15-0
@@ -17,7 +21,7 @@ EB-2011-04-15-0: Bugfix:      invalid load_formula value is not rejected
                  Issue:       GE-3451
                  Review:      DG
 
-SH-2011-04-15-0: Bugfix:      file descriptor -1 passed to system calls in 
+SH-2011-04-15-0: Bugfix:      file descriptor -1 passed to system calls in
                               interactive job support
                  Issue:       GE-3440
                  Review:      JG
